--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Tanoalife.GitHub.io : Public Website for Tanoa Life">
+    <meta name="description" content="Tanoa Life : The home of Altis Life for Arma 3&#39;s new terrain">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Tanoalife.GitHub.io</title>
+    <title>Tanoa Life</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/TanoaLife">View on GitHub</a>
 
-          <h1 id="project_title">Tanoalife.GitHub.io</h1>
-          <h2 id="project_tagline">Public Website for Tanoa Life</h2>
+          <h1 id="project_title">Tanoa Life</h1>
+          <h2 id="project_tagline">The home of Altis Life for Arma 3&#39;s new terrain</h2>
 
         </header>
     </div>
@@ -28,29 +28,39 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-the-website-for-tanoa-life" class="anchor" href="#welcome-to-the-website-for-tanoa-life" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Website for Tanoa Life.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>This is an Arma 3 mod that is forked from Tonic's Altis Life RPG
+<a href="http://arma3.com/assets/img/post/images/arma3_tanoa_screenshot_03.jpg">Screenshot of Tanoa</a></p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="plan" class="anchor" href="#plan" aria-hidden="true"><span class="octicon octicon-link"></span></a>Plan</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Currently this mod is being developed on the Altis terrain so that it is feature complete by the time that Tanoa is released. When Tanoa is released the only thing left to do will be to place all of the necessary structures and rename a number of things.</p>
+
+<h3>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h3>
+
+<p>This is a brief but not exhaustive list of features this version of Altis Life will support</p>
+
+<ul>
+<li>Vehicle Upgrades</li>
+<li>Gang Housing</li>
+<li>Virtual House Inventories</li>
+<li>Dynamic Market</li>
+<li>Black Market for Goods</li>
+</ul>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Actively being maintained by <a href="https://github.com/dbenson24" class="user-mention">@dbenson24</a>
+Check out the <a href="https://github.com/TanoaLife/Altis-Life">repository</a> for all the other contributors and code.</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>As this mod is a fork from Altis Life, you should be able to get pretty good support from the <a href="http://altisliferpg.com">Altis Life RPG Forums</a> or by submitting an issue on the <a href="https://github.com/TanoaLife/Altis-Life">repository</a> (if the issue is coding related)</p>
       </section>
     </div>
 
