Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <h3>
 <a id="welcome-to-the-website-for-tanoa-life" class="anchor" href="#welcome-to-the-website-for-tanoa-life" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Website for Tanoa Life.</h3>
 
-<p>This is an Arma 3 mod that is forked from Tonic's Altis Life RPG
-<a href="http://arma3.com/assets/img/post/images/arma3_tanoa_screenshot_03.jpg">Screenshot of Tanoa</a></p>
+<p>This is an Arma 3 mod that is forked from Tonic's Altis Life RPG</p>
+
+<p><img src="http://arma3.com/assets/img/post/images/arma3_tanoa_screenshot_03.jpg" alt="Screenshot of Tanoa"></p>
 
 <h3>
 <a id="plan" class="anchor" href="#plan" aria-hidden="true"><span class="octicon octicon-link"></span></a>Plan</h3>
